--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
     <div class="hero-carousel">
       <div class="carousel-container">
         <div class="carousel-slide" style="background-image: url('./images/Home16Pro2.png');"></div>
-        <div class="carousel-slide" style="background-image: url('./images/Desktop8.png');"></div>
-        <div class="carousel-slide" style="background-image: url('./images/Home.png');"></div>
-        <div class="carousel-slide" style="background-image: url('./images/HomeDesktop2.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('.images/Desktop - 8.png');"></div>
+        <div class="carousel-slide" style="background-image: url('.images/EventsDesktop - 7.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('.images/Home.png');"></div>
       </div>
       <div class="carousel-dots" id="carousel-dots"></div>
     </div>
