--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Ôªø<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -103,7 +103,7 @@
     details summary { cursor: pointer; padding: 24px; background: #f9f9f9; border: 1px solid #e5e5e5; border-radius: 8px; font-weight: 600; font-size: 1rem; display: flex; justify-content: space-between; align-items: center; user-select: none; transition: all 0.3s; }
     details summary:hover { background: #fff; border-color: #000; }
     details summary::after { content: '+'; font-weight: bold; font-size: 1.5rem; }
-    details[open] summary::after { content: '‚àí'; }
+    details[open] summary::after { content: '-'; }
     details[open] summary { background: #fff; border-color: #000; }
     details p { padding: 24px; color: #666; line-height: 1.8; }
 
@@ -139,7 +139,7 @@
     .nav-dropdown { position: relative; display: inline-block; }
     .dropdown-trigger { cursor: pointer; display: flex; align-items: center; gap: 6px; color: #666; font-size: 0.95rem; text-decoration: none; transition: color 0.3s; }
     .dropdown-trigger:hover { color: #000; }
-    .dropdown-trigger::after { content: '‚ñº'; font-size: 0.7rem; transition: transform 0.3s; }
+    .dropdown-trigger::after { content: '?'; font-size: 0.7rem; transition: transform 0.3s; }
     .nav-dropdown:hover .dropdown-trigger::after { transform: rotate(180deg); }
     .dropdown-menu { position: absolute; top: 100%; left: 0; background: #fff; border: 1px solid #e5e5e5; border-radius: 8px; min-width: 220px; opacity: 0; visibility: hidden; transform: translateY(-10px); transition: all 0.3s; z-index: 999; margin-top: 8px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); }
     .nav-dropdown:hover .dropdown-menu { opacity: 1; visibility: visible; transform: translateY(0); }
@@ -164,9 +164,9 @@
       <div class="nav-dropdown">
         <a href="#servicios" class="dropdown-trigger">Servicios</a>
         <div class="dropdown-menu">
-          <a href="#servicios">Dise√±o UI-UX</a>
-          <a href="#servicios">Dise√±o de aplicaciones m√≥viles</a>
-          <a href="#servicios">Dise√±o de sitios web</a>
+          <a href="ui-ux-design.html">DiseÒo UI-UX</a>
+          <a href="#servicios">DiseÒo de aplicaciones mÛviles</a>
+          <a href="#servicios">DiseÒo de sitios web</a>
           <a href="#servicios">Figma a HTML</a>
           <a href="#servicios">Figma a WordPress</a>
           <a href="#servicios">Figma a Webflow</a>
@@ -183,8 +183,8 @@
 <section class="hero">
   <div class="hero-content">
     <div class="hero-text">
-      <h1>Dise√±o de Productos que Generan Resultados</h1>
-      <p>UX/UI design, product strategy y an√°lisis de datos. Transformamos desaf√≠os en oportunidades de crecimiento.</p>
+      <h1>DiseÒo de Productos que Generan Resultados</h1>
+      <p>UX/UI design, product strategy y an·lisis de datos. Transformamos desafÌos en oportunidades de crecimiento.</p>
       <div class="hero-buttons">
         <button class="btn btn-primary">Ver Proyectos</button>
         <button class="btn btn-secondary">Agendar Llamada</button>
@@ -204,51 +204,51 @@
 </section>
 
 <section class="clients-section">
-  <div class="clients-title">CONF√çAN EN NEOPRODYUX</div>
+  <div class="clients-title">CONFÕAN EN NEOPRODYUX</div>
   <div class="marquee-wrapper">
     <div class="marquee">
-      <span class="marquee-item">‚òÖ GitHub</span>
-      <span class="marquee-item">‚òÖ LinkedIn</span>
-      <span class="marquee-item">‚òÖ Design Community</span>
-      <span class="marquee-item">‚òÖ Tech Industry</span>
-      <span class="marquee-item">‚òÖ Global Portfolio</span>
-      <span class="marquee-item">‚òÖ GitHub</span>
-      <span class="marquee-item">‚òÖ LinkedIn</span>
-      <span class="marquee-item">‚òÖ Design Community</span>
-      <span class="marquee-item">‚òÖ Tech Industry</span>
-      <span class="marquee-item">‚òÖ Global Portfolio</span>
+      <span class="marquee-item">? GitHub</span>
+      <span class="marquee-item">? LinkedIn</span>
+      <span class="marquee-item">? Design Community</span>
+      <span class="marquee-item">? Tech Industry</span>
+      <span class="marquee-item">? Global Portfolio</span>
+      <span class="marquee-item">? GitHub</span>
+      <span class="marquee-item">? LinkedIn</span>
+      <span class="marquee-item">? Design Community</span>
+      <span class="marquee-item">? Tech Industry</span>
+      <span class="marquee-item">? Global Portfolio</span>
     </div>
   </div>
 </section>
 
 <section class="stats">
   <div class="stats-grid">
-    <div class="stat-item"><h3>30+</h3><p>Proyectos en Producci√≥n</p></div>
+    <div class="stat-item"><h3>30+</h3><p>Proyectos en ProducciÛn</p></div>
     <div class="stat-item"><h3>5M+</h3><p>Usuarios Impactados</p></div>
-    <div class="stat-item"><h3>+35%</h3><p>Mejora en Conversi√≥n</p></div>
+    <div class="stat-item"><h3>+35%</h3><p>Mejora en ConversiÛn</p></div>
   </div>
 </section>
 
 <section class="services" id="servicios">
   <div class="section-title">
     <h2>Servicios Populares</h2>
-    <p>Transforma tu presencia digital con soluciones de UX/UI estrat√©gico basadas en datos reales</p>
+    <p>Transforma tu presencia digital con soluciones de UX/UI estratÈgico basadas en datos reales</p>
   </div>
   <div class="services-grid">
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=600&h=200&fit=crop');"></div>
       <h3>UX/UI Design</h3>
-      <p>Investigaci√≥n profunda, prototipos iterativos y dise√±o centrado en el usuario que convierte visitas en resultados.</p>
+      <p>InvestigaciÛn profunda, prototipos iterativos y diseÒo centrado en el usuario que convierte visitas en resultados.</p>
     </div>
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=600&h=200&fit=crop');"></div>
       <h3>Product Strategy</h3>
-      <p>An√°lisis de datos, validaci√≥n de mercado y roadmap basado en insights reales de usuarios y negocio.</p>
+      <p>An·lisis de datos, validaciÛn de mercado y roadmap basado en insights reales de usuarios y negocio.</p>
     </div>
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=600&h=200&fit=crop');"></div>
       <h3>Design System</h3>
-      <p>Componentes reutilizables, gu√≠as de dise√±o y tokens que escalan con tu producto a largo plazo.</p>
+      <p>Componentes reutilizables, guÌas de diseÒo y tokens que escalan con tu producto a largo plazo.</p>
     </div>
   </div>
 </section>
@@ -262,9 +262,9 @@
     <div class="project-card">
       <div class="project-image" style="background-image: url('images/Home16 Pro - 2.png');"></div>
       <div class="project-content">
-        <span class="project-tag">App M√≥vil</span>
+        <span class="project-tag">App MÛvil</span>
         <h3>PASEO App</h3>
-        <p>App de paseadores de mascotas con validaci√≥n de identidad y tracking en tiempo real. +45K usuarios, +89% retenci√≥n.</p>
+        <p>App de paseadores de mascotas con validaciÛn de identidad y tracking en tiempo real. +45K usuarios, +89% retenciÛn.</p>
       </div>
     </div>
     <div class="project-card">
@@ -272,7 +272,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #e0f7ff;">SaaS</span>
         <h3>Nexus Logistics</h3>
-        <p>Dashboard B2B para log√≠stica empresarial. 200+ empresas, +40% usabilidad, -30% capacitaci√≥n requerida.</p>
+        <p>Dashboard B2B para logÌstica empresarial. 200+ empresas, +40% usabilidad, -30% capacitaciÛn requerida.</p>
       </div>
     </div>
     <div class="project-card">
@@ -280,7 +280,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #ffe0e0;">E-Commerce</span>
         <h3>La Caroyense</h3>
-        <p>Redise√±o e-commerce. ‚Üë340% conversi√≥n, ‚Üì45% abandono de carrito, +$2.1M ingresos.</p>
+        <p>RediseÒo e-commerce. ?340% conversiÛn, ?45% abandono de carrito, +$2.1M ingresos.</p>
       </div>
     </div>
     <div class="project-card">
@@ -288,7 +288,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #e0e7ff;">Educativo</span>
         <h3>Yale School of Art</h3>
-        <p>Redise√±o web moderno. ‚Üë60% visitas, ‚Üë45% engagement, ‚Üë35% aplicaciones.</p>
+        <p>RediseÒo web moderno. ?60% visitas, ?45% engagement, ?35% aplicaciones.</p>
       </div>
     </div>
   </div>
@@ -296,14 +296,14 @@
 
 <section class="process" id="proceso">
   <div class="section-title">
-    <h2>C√≥mo Trabajamos</h2>
+    <h2>CÛmo Trabajamos</h2>
     <p>Un proceso probado para resultados excepcionales</p>
   </div>
   <div class="process-grid">
-    <div class="process-step"><div class="step-number">1</div><h3>Discovery</h3><p>Entendemos tu negocio, usuarios y mercado mediante investigaci√≥n profunda y an√°lisis competitivo.</p></div>
+    <div class="process-step"><div class="step-number">1</div><h3>Discovery</h3><p>Entendemos tu negocio, usuarios y mercado mediante investigaciÛn profunda y an·lisis competitivo.</p></div>
     <div class="process-step"><div class="step-number">2</div><h3>Strategy</h3><p>Definimos estrategia basada en insights, datos y oportunidades reales del mercado.</p></div>
     <div class="process-step"><div class="step-number">3</div><h3>Design</h3><p>Creamos prototipos interactivos y testamos con usuarios reales para validar soluciones.</p></div>
-    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en m√©tricas reales.</p></div>
+    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en mÈtricas reales.</p></div>
   </div>
 </section>
 
@@ -313,38 +313,38 @@
     <p>Resultados reales de productos reales</p>
   </div>
   <div class="testimonials-grid">
-    <div class="testimonial-card"><div class="rating">‚≠ê‚≠ê‚≠ê‚≠ê‚≠ê 5.0</div><p class="testimonial-text">"El trabajo de David transform√≥ completamente nuestro producto. +78% en retenci√≥n de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
-    <div class="testimonial-card"><div class="rating">‚≠ê‚≠ê‚≠ê‚≠ê‚≠ê 5.0</div><p class="testimonial-text">"Excelente an√°lisis de datos y propuestas de dise√±o. Nuestras m√©tricas de usabilidad mejoraron +40% post-redise√±o."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
-    <div class="testimonial-card"><div class="rating">‚≠ê‚≠ê‚≠ê‚≠ê‚≠ê 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras redise√±o. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"El trabajo de David transformÛ completamente nuestro producto. +78% en retenciÛn de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"Excelente an·lisis de datos y propuestas de diseÒo. Nuestras mÈtricas de usabilidad mejoraron +40% post-rediseÒo."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras rediseÒo. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
   </div>
 </section>
 
 <section class="faq" id="faq">
   <div class="section-title" style="max-width: 800px;"><h2>Preguntas Frecuentes</h2></div>
   <div class="faq-container">
-    <details><summary>¬øCu√°l es tu proceso de dise√±o?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ‚Üí Strategy ‚Üí Design ‚Üí Validation ‚Üí Optimization. Cada fase est√° fundamentada en investigaci√≥n real y datos del usuario.</p></details>
-    <details><summary>¬øC√≥mo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs claros desde el inicio. Medimos conversi√≥n, retenci√≥n, satisfacci√≥n y ROI. Mostro los n√∫meros reales, no promesas bonitas.</p></details>
-    <details><summary>¬øPuedo solicitar cambios despu√©s de terminar?</summary><p>S√≠. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivos definidos.</p></details>
-    <details><summary>¬øQu√© herramientas utilizas?</summary><p>Figma para dise√±o, Python/SQL para an√°lisis, Power BI para reporting, Git para versionamiento. Las mejores herramientas para cada fase del proyecto.</p></details>
-    <details><summary>¬øTrabajas con equipos remotos?</summary><p>100% remoto. Timezone flexible. Comunicaci√≥n clara y documentaci√≥n detallada. Estoy acostumbrado a colaborar con equipos globales.</p></details>
+    <details><summary>øCu·l es tu proceso de diseÒo?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ? Strategy ? Design ? Validation ? Optimization. Cada fase est· fundamentada en investigaciÛn real y datos del usuario.</p></details>
+    <details><summary>øCÛmo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs claros desde el inicio. Medimos conversiÛn, retenciÛn, satisfacciÛn y ROI. Mostro los n˙meros reales, no promesas bonitas.</p></details>
+    <details><summary>øPuedo solicitar cambios despuÈs de terminar?</summary><p>SÌ. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivos definidos.</p></details>
+    <details><summary>øQuÈ herramientas utilizas?</summary><p>Figma para diseÒo, Python/SQL para an·lisis, Power BI para reporting, Git para versionamiento. Las mejores herramientas para cada fase del proyecto.</p></details>
+    <details><summary>øTrabajas con equipos remotos?</summary><p>100% remoto. Timezone flexible. ComunicaciÛn clara y documentaciÛn detallada. Estoy acostumbrado a colaborar con equipos globales.</p></details>
   </div>
 </section>
 
 <section class="blog">
   <div class="section-title">
-    <h2>¬øQu√© hay de Tendencia?</h2>
-    <p>Insights y tips sobre dise√±o, UX y producto</p>
+    <h2>øQuÈ hay de Tendencia?</h2>
+    <p>Insights y tips sobre diseÒo, UX y producto</p>
   </div>
   <div class="blog-grid">
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Gu√≠a Completa de UX Research</h3><p>Metodolog√≠as modernas para entender realmente a tus usuarios y validar tus soluciones.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>M√©tricas que Importan</h3><p>C√≥mo medir el impacto real de tus decisiones de dise√±o en el negocio.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errores de UX Comunes</h3><p>Y c√≥mo evitarlos en tu pr√≥ximo proyecto de dise√±o.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>GuÌa Completa de UX Research</h3><p>MetodologÌas modernas para entender realmente a tus usuarios y validar tus soluciones.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>MÈtricas que Importan</h3><p>CÛmo medir el impacto real de tus decisiones de diseÒo en el negocio.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errores de UX Comunes</h3><p>Y cÛmo evitarlos en tu prÛximo proyecto de diseÒo.</p></div></div>
   </div>
 </section>
 
 <section class="cta" id="contacto">
-  <h2>¬øNecesitas un Producto que Crezca?</h2>
-  <p>Hablemos sobre tu desaf√≠o. Agendar una llamada r√°pida o env√≠ame un email.</p>
+  <h2>øNecesitas un Producto que Crezca?</h2>
+  <p>Hablemos sobre tu desafÌo. Agendar una llamada r·pida o envÌame un email.</p>
   <div class="cta-buttons">
     <button class="btn btn-primary">Agendar Llamada</button>
     <button class="btn btn-secondary">Enviar Email</button>
@@ -354,7 +354,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-section">
-      <h3>Compa√±√≠a</h3>
+      <h3>CompaÒÌa</h3>
       <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li></ul>
     </div>
     <div class="footer-section">
@@ -367,7 +367,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>¬© 2026 NeoProdUx. All Rights Reserved.</p>
+    <p>© 2026 NeoProdUx. All Rights Reserved.</p>
     <div class="social-links">
       <a href="https://linkedin.com/in/david-sebastian-diaz" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/dsd228" target="_blank"><i class="fab fa-github"></i></a>
