--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
       <div class="nav-dropdown">
         <a href="#servicios" class="dropdown-trigger">Servicios</a>
         <div class="dropdown-menu">
-          <a href="ui-ux-design.html">Diseño UI-UX</a>
-          <a href="#servicios">Diseño de aplicaciones móviles</a>
-          <a href="website-design.html">Diseño de sitios web</a>
+          <a href="ui-ux-design.html">Diseï¿½o UI-UX</a>
+          <a href="mobile-app-design.html">DiseÃ±o de aplicaciones mÃ³viles</a>
+          <a href="website-design.html">Diseï¿½o de sitios web</a>
           <a href="#servicios">Figma a HTML</a>
           <a href="#servicios">Figma a WordPress</a>
           <a href="#servicios">Figma a Webflow</a>
@@ -183,8 +183,8 @@
 <section class="hero">
   <div class="hero-content">
     <div class="hero-text">
-      <h1>Diseño de Productos que Generan Resultados</h1>
-      <p>UX/UI design, product strategy y análisás de datos. Transformamás desafíos en oportunidadás de crecimiento.</p>
+      <h1>Diseï¿½o de Productos que Generan Resultados</h1>
+      <p>UX/UI design, product strategy y anï¿½lisï¿½s de datos. Transformamï¿½s desafï¿½os en oportunidadï¿½s de crecimiento.</p>
       <div class="hero-buttons">
         <button class="btn btn-primary">Ver Proyectos</button>
         <button class="btn btn-secondary">Agendar Llamada</button>
@@ -204,7 +204,7 @@
 </section>
 
 <section class="clients-section">
-  <div class="clients-title">CONFÍAN EN NEOPRODYUX</div>
+  <div class="clients-title">CONFï¿½AN EN NEOPRODYUX</div>
   <div class="marquee-wrapper">
     <div class="marquee">
       <span class="marquee-item">? GitHub</span>
@@ -223,32 +223,32 @@
 
 <section class="stats">
   <div class="stats-grid">
-    <div class="stat-item"><h3>30+</h3><p>Proyectos en Producción</p></div>
+    <div class="stat-item"><h3>30+</h3><p>Proyectos en Producciï¿½n</p></div>
     <div class="stat-item"><h3>5M+</h3><p>Usuarios Impactados</p></div>
-    <div class="stat-item"><h3>+35%</h3><p>Mejora en Conversión</p></div>
+    <div class="stat-item"><h3>+35%</h3><p>Mejora en Conversiï¿½n</p></div>
   </div>
 </section>
 
 <section class="services" id="servicios">
   <div class="section-title">
     <h2>Servicios Populares</h2>
-    <p>Transforma tu presencia digital con solucionás de UX/UI estratégico basadas en datos reales</p>
+    <p>Transforma tu presencia digital con solucionï¿½s de UX/UI estratï¿½gico basadas en datos reales</p>
   </div>
   <div class="services-grid">
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=600&h=200&fit=crop');"></div>
       <h3>UX/UI Design</h3>
-      <p>Investigación profunda, prototipos iterativos y diseño centrado en el usuario que convierte visitas en resultados.</p>
+      <p>Investigaciï¿½n profunda, prototipos iterativos y diseï¿½o centrado en el usuario que convierte visitas en resultados.</p>
     </div>
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1517694712202-14dd9538aa97?w=600&h=200&fit=crop');"></div>
       <h3>Product Strategy</h3>
-      <p>análisás de datos, validación de mercado y roadmap basado en insights realás de usuarios y negocio.</p>
+      <p>anï¿½lisï¿½s de datos, validaciï¿½n de mercado y roadmap basado en insights realï¿½s de usuarios y negocio.</p>
     </div>
     <div class="service-card">
       <div class="service-icon" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=600&h=200&fit=crop');"></div>
       <h3>Design System</h3>
-      <p>Componentes reutilizables, guíás de diseño y tokens que escalan con tu producto a largo plazo.</p>
+      <p>Componentes reutilizables, guï¿½ï¿½s de diseï¿½o y tokens que escalan con tu producto a largo plazo.</p>
     </div>
   </div>
 </section>
@@ -262,9 +262,9 @@
     <div class="project-card">
       <div class="project-image" style="background-image: url('images/Home16 Pro - 2.png');"></div>
       <div class="project-content">
-        <span class="project-tag">App Móvil</span>
+        <span class="project-tag">App Mï¿½vil</span>
         <h3>PASEO App</h3>
-        <p>App de paseadorás de mascotas con validación de identidad y tracking en tiempo real. +45K usuarios, +89% retención.</p>
+        <p>App de paseadorï¿½s de mascotas con validaciï¿½n de identidad y tracking en tiempo real. +45K usuarios, +89% retenciï¿½n.</p>
       </div>
     </div>
     <div class="project-card">
@@ -272,7 +272,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #e0f7ff;">SaaS</span>
         <h3>Nexus Logistics</h3>
-        <p>Dashboard B2B para logística empresarial. 200+ empresas, +40% usabilidad, -30% capacitación requerida.</p>
+        <p>Dashboard B2B para logï¿½stica empresarial. 200+ empresas, +40% usabilidad, -30% capacitaciï¿½n requerida.</p>
       </div>
     </div>
     <div class="project-card">
@@ -280,7 +280,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #ffe0e0;">E-Commerce</span>
         <h3>La Caroyense</h3>
-        <p>Rediseño e-commerce. ?340% conversión, ?45% abandoño de carrito, +$2.1M ingresos.</p>
+        <p>Rediseï¿½o e-commerce. ?340% conversiï¿½n, ?45% abandoï¿½o de carrito, +$2.1M ingresos.</p>
       </div>
     </div>
     <div class="project-card">
@@ -288,7 +288,7 @@
       <div class="project-content">
         <span class="project-tag" style="background: #e0e7ff;">Educativo</span>
         <h3>Yale School of Art</h3>
-        <p>Rediseño web moderno. ?60% visitas, ?45% engagement, ?35% aplicaciones.</p>
+        <p>Rediseï¿½o web moderno. ?60% visitas, ?45% engagement, ?35% aplicaciones.</p>
       </div>
     </div>
   </div>
@@ -296,55 +296,55 @@
 
 <section class="process" id="proceso">
   <div class="section-title">
-    <h2>Cómo Trabajamos</h2>
+    <h2>Cï¿½mo Trabajamos</h2>
     <p>Un proceso probado para resultados excepcionales</p>
   </div>
   <div class="process-grid">
-    <div class="process-step"><div class="step-number">1</div><h3>Discovery</h3><p>Entendemos tu negocio, usuarios y mercado mediante investigación profunda y análisis competitivo.</p></div>
-    <div class="process-step"><div class="step-number">2</div><h3>Strategy</h3><p>Definimos estrategia basada en insights, datos y oportunidades realás del mercado.</p></div>
+    <div class="process-step"><div class="step-number">1</div><h3>Discovery</h3><p>Entendemos tu negocio, usuarios y mercado mediante investigaciï¿½n profunda y anï¿½lisis competitivo.</p></div>
+    <div class="process-step"><div class="step-number">2</div><h3>Strategy</h3><p>Definimos estrategia basada en insights, datos y oportunidades realï¿½s del mercado.</p></div>
     <div class="process-step"><div class="step-number">3</div><h3>Design</h3><p>Creamos prototipos interactivos y testamos con usuarios reales para validar soluciones.</p></div>
-    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en mmétricas reales.</p></div>
+    <div class="process-step"><div class="step-number">4</div><h3>Optimize</h3><p>Medimos impacto, iteramos y optimizamos continuamente basado en mmï¿½tricas reales.</p></div>
   </div>
 </section>
 
 <section class="testimonials">
   <div class="section-title">
     <h2>Lo que dicen nuestros clientes</h2>
-    <p>Resultados realás de productos reales</p>
+    <p>Resultados realï¿½s de productos reales</p>
   </div>
   <div class="testimonials-grid">
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"El trabaño de David transformó completamente nuestro producto. +78% en retención de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"Excelente análisás de datos y propuestás de diseño. Nuestras mmétricás de usabilidad mejoraron +40% post-Rediseño."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
-    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras Rediseño. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"El trabaï¿½o de David transformï¿½ completamente nuestro producto. +78% en retenciï¿½n de usuarios en 3 meses. Recomendado 100%."</p><p class="testimonial-author">CEO, Startup Tech</p><p class="testimonial-role">Founder</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"Excelente anï¿½lisï¿½s de datos y propuestï¿½s de diseï¿½o. Nuestras mmï¿½tricï¿½s de usabilidad mejoraron +40% post-Rediseï¿½o."</p><p class="testimonial-author">Product Manager, Enterprise</p><p class="testimonial-role">Product Lead</p></div>
+    <div class="testimonial-card"><div class="rating">????? 5.0</div><p class="testimonial-text">"+$2.1M en ingresos tras Rediseï¿½o. El mejor ROI que hemos visto. Profesional, preciso y orientado a resultados."</p><p class="testimonial-author">Founder, E-commerce</p><p class="testimonial-role">CEO</p></div>
   </div>
 </section>
 
 <section class="faq" id="faq">
   <div class="section-title" style="max-width: 800px;"><h2>Preguntas Frecuentes</h2></div>
   <div class="faq-container">
-    <details><summary>¿Cuál es tu proceño de diseño?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ? Strategy ? Design ? Validation ? Optimization. Cada fase está fundamentada en investigación real y datás del usuario.</p></details>
-    <details><summary>¿Cómo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs clarás desde el inicio. Medimos conversión, retención, satisfacción y ROI. Mostro los números reales, no promesas bonitas.</p></details>
-    <details><summary>¿Puedo solicitar cambiás despuás de terminar?</summary><p>Sí. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivás definidos.</p></details>
-    <details><summary>¿Qué herramientas utilizas?</summary><p>Figma para diseño, Python/SQL para análisis, Power BI para reporting, Git para versionamiento. Las mejores herramientas para cada fase del proyecto.</p></details>
-    <details><summary>¿Trabajas con equipos remotos?</summary><p>100% remoto. Timezone flexible. Comunicación clara y documentación detallada. Estoy acostumbrado a colaborar con equipos globales.</p></details>
+    <details><summary>ï¿½Cuï¿½l es tu proceï¿½o de diseï¿½o?</summary><p>Utilizamos un proceso iterativo basado en Design Thinking: Discovery ? Strategy ? Design ? Validation ? Optimization. Cada fase estï¿½ fundamentada en investigaciï¿½n real y datï¿½s del usuario.</p></details>
+    <details><summary>ï¿½Cï¿½mo garantizas resultados measurables?</summary><p>Todo proyecto tiene KPIs clarï¿½s desde el inicio. Medimos conversiï¿½n, retenciï¿½n, satisfacciï¿½n y ROI. Mostro los nï¿½meros reales, no promesas bonitas.</p></details>
+    <details><summary>ï¿½Puedo solicitar cambiï¿½s despuï¿½s de terminar?</summary><p>Sï¿½. Las iteraciones basadas en feedback real son parte fundamental del proceso. Trabajamos hasta que los resultados cumplan los objetivï¿½s definidos.</p></details>
+    <details><summary>ï¿½Quï¿½ herramientas utilizas?</summary><p>Figma para diseï¿½o, Python/SQL para anï¿½lisis, Power BI para reporting, Git para versionamiento. Las mejores herramientas para cada fase del proyecto.</p></details>
+    <details><summary>ï¿½Trabajas con equipos remotos?</summary><p>100% remoto. Timezone flexible. Comunicaciï¿½n clara y documentaciï¿½n detallada. Estoy acostumbrado a colaborar con equipos globales.</p></details>
   </div>
 </section>
 
 <section class="blog">
   <div class="section-title">
-    <h2>¿Qué hay de Tendencia?</h2>
-    <p>Insights y tips sobre diseño, UX y producto</p>
+    <h2>ï¿½Quï¿½ hay de Tendencia?</h2>
+    <p>Insights y tips sobre diseï¿½o, UX y producto</p>
   </div>
   <div class="blog-grid">
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Guía Completa de UX Research</h3><p>Metodologías modernas para entender realmente a tus usuarios y validar tus soluciones.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Mmétricas que Importan</h3><p>Cómo medir el impacto real de tás decisionás de diseño en el negocio.</p></div></div>
-    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errorás de UX Comunes</h3><p>Y cómo evitarlos en tu próximo proyecño de diseño.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Guï¿½a Completa de UX Research</h3><p>Metodologï¿½as modernas para entender realmente a tus usuarios y validar tus soluciones.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>Mmï¿½tricas que Importan</h3><p>Cï¿½mo medir el impacto real de tï¿½s decisionï¿½s de diseï¿½o en el negocio.</p></div></div>
+    <div class="blog-card"><div class="blog-image" style="background-image: url('https://images.unsplash.com/photo-1561070791-2526d30994b5?w=800&h=200&fit=crop');"></div><div class="blog-content"><h3>5 Errorï¿½s de UX Comunes</h3><p>Y cï¿½mo evitarlos en tu prï¿½ximo proyecï¿½o de diseï¿½o.</p></div></div>
   </div>
 </section>
 
 <section class="cta" id="contacto">
-  <h2>¿Necesitas un Producto que Crezca?</h2>
-  <p>Hablemos sobre tu desafío. Agendar una llamada rápida o envíame un email.</p>
+  <h2>ï¿½Necesitas un Producto que Crezca?</h2>
+  <p>Hablemos sobre tu desafï¿½o. Agendar una llamada rï¿½pida o envï¿½ame un email.</p>
   <div class="cta-buttons">
     <button class="btn btn-primary">Agendar Llamada</button>
     <button class="btn btn-secondary">Enviar Email</button>
@@ -354,7 +354,7 @@
 <footer>
   <div class="footer-container">
     <div class="footer-section">
-      <h3>Compañía</h3>
+      <h3>Compaï¿½ï¿½a</h3>
       <ul><li><a href="#servicios">Servicios</a></li><li><a href="#proyectos">Proyectos</a></li><li><a href="#proceso">Proceso</a></li><li><a href="#faq">FAQ</a></li></ul>
     </div>
     <div class="footer-section">
@@ -367,7 +367,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>© 2026 NeoProdUx. All Rights Reserved.</p>
+    <p>ï¿½ 2026 NeoProdUx. All Rights Reserved.</p>
     <div class="social-links">
       <a href="https://linkedin.com/in/david-sebastian-diaz" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/dsd228" target="_blank"><i class="fab fa-github"></i></a>
