--- a/index.html
+++ b/index.html
@@ -35,18 +35,119 @@
     .btn-secondary { background: transparent; color: #000; border: 2px solid #000; }
     .btn-secondary:hover { background: #000; color: #fff; }
 
-    /* CAROUSEL 3D */
-    .hero-carousel { position: relative; width: 100%; height: 450px; border-radius: 16px; overflow: hidden; background: #f0f0f0; box-shadow: 0 20px 60px rgba(0, 0, 0, 0.12); perspective: 1200px; }
-    .carousel-container { width: 100%; height: 100%; position: relative; transform-style: preserve-3d; animation: rotateCarousel 20s linear infinite; }
-    @keyframes rotateCarousel { 0% { transform: rotateY(0deg); } 100% { transform: rotateY(360deg); } }
-    .carousel-slide { position: absolute; width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; background-size: cover; background-position: center; background-repeat: no-repeat; backface-visibility: hidden; }
-    .carousel-slide:nth-child(1) { transform: rotateY(0deg) translateZ(0); }
-    .carousel-slide:nth-child(2) { transform: rotateY(90deg) translateZ(0); }
-    .carousel-slide:nth-child(3) { transform: rotateY(180deg) translateZ(0); }
-    .carousel-slide:nth-child(4) { transform: rotateY(270deg) translateZ(0); }
-    .carousel-dots { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); display: flex; gap: 8px; z-index: 10; }
-    .dot { width: 8px; height: 8px; border-radius: 50%; background: rgba(255, 255, 255, 0.6); cursor: pointer; transition: all 0.3s; }
-    .dot.active { background: #fff; width: 24px; border-radius: 4px; }
+   /* CAROUSEL 3D - EFECTO COVERFLOW PREMIUM */
+.hero-carousel { 
+  position: relative; 
+  width: 100%; 
+  height: 450px; 
+  border-radius: 20px; 
+  overflow: visible;
+  perspective: 1500px; 
+  background: transparent;
+}
+
+.carousel-container { 
+  width: 100%; 
+  height: 100%; 
+  position: relative; 
+  transform-style: preserve-3d; 
+  animation: rotateCarousel 25s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+  filter: drop-shadow(0 30px 80px rgba(0, 0, 0, 0.3));
+}
+
+@keyframes rotateCarousel { 
+  0% { transform: rotateY(0deg) rotateX(10deg); } 
+  100% { transform: rotateY(360deg) rotateX(10deg); } 
+}
+
+.carousel-slide { 
+  position: absolute; 
+  width: 90%; 
+  height: 90%; 
+  left: 5%;
+  top: 5%;
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  border-radius: 16px;
+  border: 3px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 
+    0 20px 60px rgba(0, 0, 0, 0.4),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.1);
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.carousel-slide::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(
+    135deg,
+    rgba(255, 255, 255, 0.1) 0%,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
+  border-radius: 16px;
+  pointer-events: none;
+}
+
+.carousel-slide:nth-child(1) { 
+  transform: rotateY(0deg) translateZ(350px) scale(1.1);
+  z-index: 4;
+  opacity: 1;
+}
+
+.carousel-slide:nth-child(2) { 
+  transform: rotateY(90deg) translateZ(350px) scale(0.85);
+  z-index: 3;
+  opacity: 0.7;
+  filter: brightness(0.7);
+}
+
+.carousel-slide:nth-child(3) { 
+  transform: rotateY(180deg) translateZ(350px) scale(0.75);
+  z-index: 2;
+  opacity: 0.5;
+  filter: brightness(0.5);
+}
+
+.carousel-slide:nth-child(4) { 
+  transform: rotateY(270deg) translateZ(350px) scale(0.85);
+  z-index: 3;
+  opacity: 0.7;
+  filter: brightness(0.7);
+}
+
+.carousel-dots { 
+  position: absolute; 
+  bottom: 20px; 
+  left: 50%; 
+  transform: translateX(-50%); 
+  display: flex; 
+  gap: 8px; 
+  z-index: 10; 
+}
+
+.dot { 
+  width: 8px; 
+  height: 8px; 
+  border-radius: 50%; 
+  background: rgba(255, 255, 255, 0.6); 
+  cursor: pointer; 
+  transition: all 0.3s; 
+}
+
+.dot.active { 
+  background: #fff; 
+  width: 24px; 
+  border-radius: 4px; 
+}
 
     .clients-section { padding: 60px 40px; background: #f9f9f9; border-top: 1px solid #e5e5e5; border-bottom: 1px solid #e5e5e5; }
     .clients-title { text-align: center; color: #999; font-size: 0.95rem; font-weight: 600; margin-bottom: 30px; letter-spacing: 0.5px; }
