Update carousel slide images in index.html

--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
 
     <div class="hero-carousel">
       <div class="carousel-container">
-        <div class="carousel-slide" style="background-image: url('images/Home16Pro2.png');"></div>
+        <div class="carousel-slide" style="background-image: url('images/Home16 Pro - 2.png');"></div>
         <div class="carousel-slide" style="background-image: url('images/Desktop - 8.png');"></div>
-        <div class="carousel-slide" style="background-image: url('images/EventsDesktop - 7.jpg');"></div>
+        <div class="carousel-slide" style="background-image: url('images/Desktop - 3.png');"></div>
         <div class="carousel-slide" style="background-image: url('images/Home.png');"></div>
       </div>
       <div class="carousel-dots" id="carousel-dots"></div>
