Update link in blog.html to point to new page

--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
           <div class="meta">September 18, 2025</div>
           <div class="title">Mastering Figma Make: From Prompt to Prototype (2025 Complete Guide)</div>
           <p class="excerpt">The design landscape has fundamentally shifted in 2025, and Figma Make represents a revolutionary approach to turning ideas into interactive prototypes using AI assistance.</p>
-          <a class="link" href="https://uistudioz.com/master-figma-make-prompt-to-prototype/" target="_blank">Read More →</a>
+          <a class="link" href="blog-figma-make.html" target="_blank">Read More →</a>
         </div>
       </article>
 
