--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
       width: 100%;
       height: 350px;
       background-size: cover;
-      background-position: center;
+      background-position: center top;
       background-repeat: no-repeat;
       position: relative;
       overflow: hidden;
