Actualiza logo en todas las páginas: N, P, U en naranja y más grande

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
     nav { position: fixed; top: 0; width: 100%; background: rgba(255, 255, 255, 0.95); backdrop-filter: blur(10px); z-index: 1000; border-bottom: 1px solid rgba(0, 0, 0, 0.05); padding: 16px 0; }
     .nav-container { max-width: 1400px; margin: 0 auto; padding: 0 40px; display: flex; justify-content: space-between; align-items: center; }
-    .logo { font-size: 1.3rem; font-weight: 800; color: #000; }
+    .logo { font-size: 1.6rem; font-weight: 800; color: #000; letter-spacing: -0.5px; }
     nav a { color: #666; font-size: 0.95rem; transition: color 0.3s; text-decoration: none; }
     nav a:hover { color: #000; }
     .nav-cta { background: #000; color: #fff; padding: 10px 24px; border-radius: 8px; transition: all 0.3s; }
@@ -113,7 +113,7 @@
 
 <nav>
   <div class="nav-container">
-    <a href="index.html" class="logo" style="text-decoration: none; color: #000;">NeoProdUx</a>
+    <a href="index.html" class="logo" style="text-decoration: none; color: #000;"><span style="color: #ff6b35;">N</span>eo<span style="color: #ff6b35;">P</span>rod<span style="color: #ff6b35;">U</span>x</a>
     <div style="display: flex; gap: 40px; align-items: center;">
       <div class="nav-dropdown">
         <a href="index.html#servicios" class="dropdown-trigger">Servicios</a>
@@ -289,3 +289,5 @@
 
 </body>
 </html>
+
+
